# python-izaber-wamp-zerp

./: .gitignore  Dockerfile  Pipfile  README  README.md  VERSIONS.md  docker-compose.yml  generate_types_ast.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
docker/: run-test.sh  setup-env.sh  wait-for-nexus.py  wait-for-nexus.sh
docs/: advanced_script_usage.md  type_generation.md  usage_in_scripts.md  wampcli_usage.md
izaber_wamp_zerp/: __init__.py  __main__.py  controller.py  controller.pyi  generate_types.py  wampcli.py
izaber_wamp_zerp/models/: zerp.py
src/izaber_wamp_zerp/: generate_types.py
tests/: test_01_import.py  test_02_basic.py
tests/utils/: __init__.py
volumes/: izaber.yaml.template
wampcli/: __init__.py
